# Sidekick

./: .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  CMakeLists.txt  MFCIPCQuickStart.md  README.md  build  build-deps  build-deps.cmd  build-webrtc  build-webrtc.cmd  build.cmd  deploy  package  package.cmd
MFCCefLogin/: CMakeLists.txt  IPCWorkerThread.cpp  IPCWorkerThread.h  MFCCefEventHandler.cpp  MFCCefEventHandler.h  MFCCefLogin.rc.in  MFCCefLogin_mac.mm  MFCCefLogin_win.cpp  MFCJsExtensions.cpp  MFCJsExtensions.h  build_number.h  compatibility.manifest  increment.cmake  mfc_login.js.in  process_helper_mac.cc  resource.h
MFCCefLogin/mac/: Info.plist.in  MFCCefLogin.icns  helper-Info.plist
MFCCefLogin/mac/English.lproj/: InfoPlist.strings.in  MainMenu.xib
ObsBroadcast/: ADMWrapper.cpp  ADMWrapper.h  BroadcastPlugin.rc.in  BroadcastPluginStart.cpp  CMakeLists.txt  EncoderFactory.cpp  EncoderFactory.h  HttpThread.cpp  HttpThread.h  MFCEdgeIngest.cpp  MFCEdgeIngest.h  MfcOauthApi.cpp  MfcOauthApi.h  MfcOauthApiCtx.cpp  MfcOauthApiCtx.h  MfcOauthApiExample.cpp  MfcOauthApiExample.h  NV12Buf.cpp  NV12Buf.h  ObsBroadcast.cpp  ObsBroadcast.h  ObsCallbackEvent.cpp  ObsCallbackEvent.h  ProfileTemplateDlg.h  SDPUtil.h  SanitizeInputs.h  SidekickProperties.cpp  SidekickProperties.h  SidekickTypes.h  VideoSendStream.cpp  VideoSendStream.h  VideoTrackSource.cpp  VideoTrackSource.h  WebRTCStream.cpp  WebRTCStream.h  X264Encoder.cpp  X264Encoder.h  dllmain.cpp  dllmain.qrc  message_box.cpp  (+5 more)
ObsBroadcast/css/: QtDarkOrange-MFCDock.stylesheet  QtDarkOrange.stylesheet
ObsUpdater/: CMakeLists.txt  FCClientVer.h  FileUpdater.cpp  FileUpdater.h  MFC-OBSPluginStart.cpp  MFCUpdaterAPI.cpp  MFCUpdaterAPI.h  ManifestFile.cpp  ManifestFile.h  ObsUpdater.h  Thread.h  _MFC-OBSPluginUpdater.rc  dllmain.cpp  resource.h
cmake/: FindLibWebRTC.cmake  FindWebRTC.cmake  downloadCPM.cmake  helpers.cmake  variables.cmake
installer/: Installer-del-obs-browser.iss.in  Installer.iss.in  SidekickSetup.txt
installer/isc/: ISPPBuiltins.iss  whatsnew.htm
installer/isc/Languages/: German.isl  Slovenian.isl  Turkish.isl
libPlugins/: CMakeLists.txt  CollectSystemInfo.cpp  CollectSystemInfo.h  EdgeChatSock.cpp  EdgeChatSock.h  HttpRequest.cpp  HttpRequest.h  IPCShared.cpp  IPCShared.h  MFCConfigConstants.h  MFCEdgeIngest.cpp  MFCEdgeIngest.h  MFCPluginAPI.cpp  MFCPluginAPI.h  ModelKey.cpp  ModelKey.h  ObsProfileUtil.cpp  ObsProfileUtil.hpp  ObsServicesJson.cpp  ObsServicesJson.h  ObsUtil.cpp  ObsUtil.h  PluginParameterBlock.cpp  PluginParameterBlock.h  Portable.h  SidekickModelConfig.cpp  SidekickModelConfig.h  SysParam.cpp  SysParam.h  SysParam_Mac.cpp  SysParam_Mac.h  build_version.h.in
libcef_fcs/: CMakeLists.txt  CefEventHandler_mac.mm  CefLogin_handler_win.cpp  cefEventHandler.cpp  cefEventHandler.h  cefJSExtensions.cpp  cefJSExtensions.h  cefLogin_app.h
libfcs/: CMakeLists.txt  Compat.h  FcMsg.h  FcUserIds.h  ILog.h  JSON_parser.h  Log.cpp  Log.h  MfcJson.cpp  MfcJson.h  MfcLog.cpp  MfcLog.h  MfcTimer.h  UtilCommon.cpp  UtilCommon.h  UtilString.cpp  UtilString.h  fcs.h  fcs_b64.cpp  fcs_b64.h  fcslib_string.h  fcslib_util.h  gettimeofday.cpp  jsmin.cpp  jsmin.h  json_ConvertUTF.cpp  md5.cpp  md5.h
libipc/: CMakeLists.txt  EventList.cpp  EventList.h  EvtDefines.cpp  EvtDefines.h  IPCEvent.cpp  IPCEvent.h  IPCEventHandler.cpp  IPCEventHandler.h  IPCSemaphore.cpp  IPCSemaphore.h  IPCUtil.cpp  IPCUtil.h  ProcessRecord.h  Router.cpp  Router.h  ShmemBase.h  ShmemContainer.h  ShmemDefines.h  ShmemManager.cpp  ShmemManager.h  ShmemSignal.h  ShmemSimpleType.h  ShmemVector.h  mfc_ipc.h
mfc-browser/: CMakeLists.txt  MFCBrowserPanel.cpp  MfcJsExtensions.cpp  MfcJsExtensions.h  browser-app.cpp  browser-client.cpp  browser-version.h  mfc-browser-page.rc  mfc-browser.rc  obs-browser-plugin.cpp
mfc-browser/panel/: QueCEFTask.cpp
patches/mac/bash/: obs-cmakelists.patch
patches/win/: CompactWebRTCLogging.patch  CopyMSVCBins.patch
scripts/: bldman.sh  build-deps-full.sh  build-deps-minimal.sh  build-obs-full.sh  build-obs-minimal.sh  install-build-reqs.ps1  install-vs2019.ps1  install-winsdk.ps1  package-obs-dmg.sh  package-v1.sh  package-v2.sh  package-v3.sh
scripts/homebrew/: boost.rb  ffmpeg.rb  x264.rb
scripts/homebrew/qt_5_10/: qt.rb
scripts/install/obs-dmg/: settings.json
scripts/install/osx/: Info.plist  install-introduction-es.txt  install-introduction-ro.txt  obs.icns  packageApp.sh  post-mfclogin.sh  pre-mfcbroadcast.sh  pre-mfclogin.sh  reset-obs-settings-introduction.txt  reset-obs-settings.pkgproj  reset-obs-settings.sh  sidekick-obs26.pkgproj  sidekick-obs26.pkgproj.in  sidekick-uninstall.pkgproj  sidekick-v1.pkgproj  sidekick-v2.pkgproj  sidekick.pkgproj  uninstall-introduction-es.txt  uninstall-introduction-ro.txt  uninstall-introduction.txt  uninstall-mfcbroadcast.sh  uninstall-mfclogin.sh
scripts/macdylibbundler/: CMakeLists.txt  LICENSE  Makefile  README.md
scripts/macdylibbundler/src/: Dependency.cpp  Dependency.h  DylibBundler.cpp  DylibBundler.h  Settings.cpp  Settings.h  Utils.cpp  Utils.h  main.cpp
shmspy/: CMakeLists.txt  QTEventHandler.cpp  QTEventHandler.h  main.cpp  messagedlg.cpp  messagedlg.h  messagedlg.ui  mfcspymain.cpp  mfcspymain.h  mfcspymain.ui
websocket-client/: CMakeLists.txt  FcsWebsocket.cpp  FcsWebsocket.h  FcsWebsocketImpl.cpp  FcsWebsocketImpl.h  WebsocketClient.cpp  WebsocketClient.h  WowzaWebsocketClientImpl.cpp  WowzaWebsocketClientImpl.h  dllmain.cpp
